<resources>
    <string name="app_name">ArchCompSubmission</string>
    <string name="title_activity_detail">Detail</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_favorite">Favorite</string>

    <string name="no_data">No Data</string>
    <string name="description_poster">Poster Image</string>
    <string name="title_share">Share</string>
    <string name="label_title">Title</string>
    <string name="label_release">Release Date</string>
    <string name="label_vote">Average Vote</string>
    <string name="label_overview">Overview</string>
    <string name="label_airing">First Airing</string>

    <string name="movie">Movies</string>
    <string name="tv_show">Tv Shows</string>
    <string name="error">Error</string>
    <string name="splash_image">splash image</string>
    <string name="submission">Submission</string>
    <string name="architecture_component">Architecture Component</string>
</resources>